# SentinelDLP

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  REQUIREMENTS.md  alembic.ini  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.claude/: settings.local.json
agent/: CMakeLists.txt  CMakePresets.json  vcpkg.json
agent/cmake/: FindWDK.cmake
agent/config/: config.yaml.example
agent/driver/: CMakeLists.txt  akeso_dlp_filter.c  akeso_dlp_filter.h  akeso_dlp_filter.inf  filter_comm.c  sentinel_dlp_filter.c  sentinel_dlp_filter.h  sentinel_dlp_filter.inf
agent/include/akeso/: agent_service.h  browser_upload_monitor.h  clipboard_monitor.h  config.h  discover_scanner.h  driver_comm.h  grpc_client.h  incident_queue.h  policy_cache.h  tamper_protection.h
agent/include/akeso/detection/: content_extractor.h  file_type_detector.h  hs_regex_analyzer.h  keyword_analyzer.h  pipeline.h  policy_evaluator.h  validators.h
agent/include/akeso/response/: block_action.h  notification.h  quarantine_action.h  user_cancel.h
agent/include/sentinel/: agent_service.h  config.h  driver_comm.h  driver_protocol.h  grpc_client.h  incident_queue.h  policy_cache.h
agent/installer/: AkesoDLP-Agent.wxs  build.bat
agent/src/: agent_service.cpp  browser_upload_monitor.cpp  clipboard_monitor.cpp  config.cpp  discover_scanner.cpp  driver_comm.cpp  grpc_client.cpp  incident_queue.cpp  main.cpp  policy_cache.cpp  tamper_protection.cpp
agent/src/detection/: content_extractor.cpp  file_type_detector.cpp  hs_regex_analyzer.cpp  keyword_analyzer.cpp  pipeline.cpp  policy_evaluator.cpp  validators.cpp
agent/src/response/: block_action.cpp  notification.cpp  quarantine_action.cpp  user_cancel.cpp
agent/tests/: test_config.cpp  test_content_extractor.cpp  test_driver_comm.cpp  test_file_type_detector.cpp  test_hs_regex_analyzer.cpp  test_incident_queue.cpp  test_keyword_analyzer.cpp  test_policy_cache.cpp  test_policy_evaluator.cpp  test_validators.cpp
console/: Dockerfile  package-lock.json  package.json  playwright.config.ts  vite.config.ts
console/src/: App.tsx  index.css
console/src/api/: client.ts
console/src/components/: AuthGuard.tsx  CommandPalette.tsx  GlobalSearch.tsx  Layout.tsx  NotificationPanel.tsx
console/src/hooks/: useTitle.ts
console/src/pages/: AgentDetail.tsx  Agents.tsx  Dashboard.tsx  Discovers.tsx  Fingerprints.tsx  IncidentSnapshot.tsx  Incidents.tsx  Login.tsx  MFAVerify.tsx  NetworkSettings.tsx  Placeholder.tsx  Policies.tsx  PolicyEditor.tsx  Reports.tsx  UserRisk.tsx
console/src/stores/: authStore.ts  notificationStore.ts  themeStore.ts
console/tests/e2e/: auth.spec.ts  dashboard.spec.ts  helpers.ts  incidents.spec.ts  policies.spec.ts  search.spec.ts  settings.spec.ts  theme.spec.ts
docs/: API.md  ARCHITECTURE.md  DEMO.md  DEVELOPMENT.md
grafana/: dlp_dashboard.json
migrations/versions/: 732f6ef091dc_initial_schema.py
network/: Dockerfile.http  Dockerfile.smtp  __init__.py  content_normalizer.py  dlp_addon.py  http_monitor.py  http_prevent.py  mitmproxy_entry.py  smtp_entry.py  smtp_monitor.py  smtp_prevent.py
network/templates/: block_page.html
proto/: akesodlp.proto  sentineldlp.proto
scripts/: Setup-VM.ps1  deploy.sh  gen-certs.sh  gen-proxy-ca.sh  wait-for-db.sh
server/: Dockerfile  command_queue.py  config.py  database.py  grpc_rate_limiter.py  grpc_server.py  main.py  metrics.py  policy_events.py  shutdown.py
server/api/: agents.py  auth.py  dead_letter.py  dependencies.py  detection.py  dictionaries.py  discover.py  fingerprints.py  identifiers.py  incidents.py  metrics_endpoint.py  network_settings.py  notifications.py  policies.py  reports.py  response_rules.py  search.py  system.py  users.py
server/detection/: __init__.py  archive_inspector.py  engine.py  file_inspector.py  models.py  policy_evaluator.py
server/detection/analyzers/: __init__.py  data_identifier_analyzer.py  file_type_analyzer.py  fingerprint_analyzer.py  keyword_analyzer.py  regex_analyzer.py  validators.py
server/models/: __init__.py  agent.py  audit.py  auth.py  dead_letter.py  detection.py  discover.py  incident.py  notification.py  policy.py  response.py
server/proto/: akesodlp_pb2.py  akesodlp_pb2.pyi  akesodlp_pb2_grpc.py  sentineldlp_pb2.py  sentineldlp_pb2.pyi  sentineldlp_pb2_grpc.py
server/schemas/: __init__.py  agent.py  auth.py  base.py  detection.py  discover.py  incident.py  notification.py  policy.py  response.py  system.py
server/scripts/: demo_seed.py  seed.py  seed_incidents.py
server/services/: agent_service.py  auth_service.py  db_maintenance.py  dead_letter_queue.py  discover_service.py  incident_service.py  mfa_service.py  notification_service.py  policy_service.py  report_exporter.py  report_generator.py  risk_calculator.py  siem_emitter.py  smart_response.py  syslog_exporter.py
server/tasks/: archive_job.py
tests/: test_config_security.py  test_content_normalizer.py  test_fingerprint_analyzer.py  test_fingerprint_api.py  test_http_adversarial.py  test_http_monitor.py  test_network_settings.py  test_notifications.py  test_reporting.py  test_smart_response.py  test_smtp_adversarial.py  test_smtp_monitor.py
tests/agent/: test_e2e.md
tests/api/: test_auth.py  test_detection.py  test_dictionaries.py  test_identifiers.py  test_incidents.py  test_policies.py  test_response_rules.py  test_search.py  test_supporting.py  test_system.py  test_users.py
tests/benchmark/: load_test.py  network_load_test.py
tests/detection/: test_archive_inspector.py  test_data_identifier_analyzer.py  test_engine.py  test_file_inspector.py  test_file_type_analyzer.py  test_keyword_analyzer.py  test_pipeline.py  test_policy_evaluator.py  test_regex_analyzer.py
tests/fixtures/dlp_events/: audit.json  block.json  classification.json  policy_violation.json  removable_media.json
tests/grpc/: test_grpc_server.py
tests/integration/: conftest.py  cross_channel_test.py  lifecycle_test.py  network_monitor_test.py  parity_test.py  siem_test.py
tools/: generate_dlp_scenarios.py
(+5 files in other folders)
